--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
@@ -30,6 +32,10 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.4"
+    "@testing-library/react": "^14.0.0",
+    "@vitejs/plugin-react": "^4.0.4",
+    "jsdom": "^22.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "vitest": "^0.34.5"
   }
 }
