--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:watch": "vitest --watch"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.0",
     "@heroicons/react": "^2.0.18",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-tabs": "^1.0.4",
