--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@formkit/auto-animate": "^0.8.0",
     "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@tiptap/pm": "^2.1.11",
