--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@formkit/auto-animate": "^0.8.0",
     "@heroicons/react": "^2.0.18",
     "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@tiptap/pm": "^2.1.11",
